add flex properties

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.appContainer {
+  justify-content: space-around;
+  display: flex;
+}
