add selectedObj to state

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,7 +29,7 @@ button:hover {
   background-color: #ffffff; 
   color: rgb(141, 129, 129);
 }
-.appContainer {
+/* .appContainer {
   justify-content: space-around;
   display: flex;
-}
+} */
