--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,35 +6,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: #000814;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-    -webkit-user-select: all;
+}
+code:hover{
+  -webkit-user-select: all;
+    -moz-user-select: all;
     user-select: all;
 }
-code:focus {
-  animation: select 100ms step-end forwards;
+code:focus{
+  -webkit-user-select: auto;
+  -moz-user-select: auto;
+  user-select: auto;
 }
 button{
-  background-color: rgb(141, 129, 129); 
+  background-color: white; 
   height: 30px;
-  border: none;
-  color: white;
+  color: #000000;
   padding: 8px 12px;
   text-decoration: none;
   font-size: 16px;
-  border-radius: 8px;
-  transition-duration: .4s;
+  border-radius: 20px 0 20px 0px;
+  transition-duration: .25s;
   margin: 3px;
-  font-family: 'Crimson Text', serif;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 button:hover {
-  background-color: #ffffff; 
-  color: rgb(141, 129, 129);
+  background-color: black; 
+  color: white;
+  border-color: #81C14B;
 }
 form{
   width: 400px;
@@ -43,13 +49,8 @@ form{
 }
 .content{
   width: 500px;
-  background-color: red;
+  background-color: #001D3D;
   margin: auto;
-}
-
-@keyframes select {
-  to {
-    -webkit-user-select: auto;
-    user-select: auto;
-  }
+  color: #DDFFF7;
+  /* border-radius: ; */
 }
