--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,7 +22,9 @@ body {
   color: var(--textcolor);
   padding: 10px;
 }
-
+input[show="0"]{
+  display:none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
