--- a/src/css/index.css
+++ b/src/css/index.css
@@ -116,6 +116,9 @@ input{
   padding: 10px;
   margin: 20px;
 }
+.mascot{
+  font-size: 50px;
+}
 @keyframes roll {
   0%   {left:500px }
   100% {left:0px }
