--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,11 +60,19 @@ button:hover {
 }
 form{
   width: 400px;
+  background-color: var(--secondarycontentcolor);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0 20px 20px 0;
 }
 input{
-  height: 25px;
+  height: 20px;
   margin: 5px;
-  border-radius: 20px 0 20px 0px;;
+  padding: 5px;
+  text-align: center;
+  border-radius: 20px 0 20px 0px;
+  border-width: 1px;
+  border-color: var(--mainbgcolor);
 }
 .header{
   font-family: 'Orbitron', sans-serif;
@@ -74,13 +82,15 @@ input{
   background-color: var(--maincontentcolor);
   margin: auto;
   padding: 10px;
-  /* border-radius: ; */
+  border-radius: 20px 0 0px 20px;
+  border-style: solid;
+  border-width: 1px;
 }
 .code{
   /* width: ; */
   overflow:auto;
   color: var(--mainbgcolor);
-  border-color: var(--secondarycontentcolor);
+  border-color: var(--mainbgcolor);
   border-style: solid;
   border-width: 2px;
   background-color: var(--thirdcontentcolor);
@@ -94,9 +104,10 @@ input{
 }
 
 .listItem{
+  border-radius: 20px 0 0px 20px;
   width: min 40%;
   height: 50px;
-  border-color: var(--secondarycontentcolor);
+  border-color: var(--textcolor);
   border-style: solid;
   border-width: 1px;
   padding: 10px;
@@ -110,6 +121,9 @@ input{
   background-image: linear-gradient(to right, var(--mainbgcolor), var(--highlight));
 }
 .navButts{
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0 20px 20px 0;
   width: 250px;
   height: 30px;
   padding: 10px;
