--- a/src/css/index.css
+++ b/src/css/index.css
@@ -178,6 +178,17 @@ label[show="0"]{
 .checkbox{
   size: 20px;
 }
+.footer{
+  margin: 0;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--secondarycontentcolor);
+  background-color: var(--mainbgcolor);
+}
 @keyframes roll {
   0%   {left:500px }
   100% {left:0px }
